[gd_scene load_steps=2 format=3 uid="uid://dapphqhk1411s"]

[ext_resource type="Script" path="res://scenes/enemy/enemy_base/enemy_base.gd" id="1_of236"]

[node name="EnemyBase" type="CharacterBody2D" groups=["moveables"]]
collision_layer = 0
script = ExtResource("1_of236")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
